--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@700&display=swap');
+
+@tailwind base;       
+@tailwind components; 
+@tailwind utilities; 
+
+body {
+  font-family: 'Inter', sans-serif;
+}
+
+
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
