--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,49 @@ body {
         
     }
 }
+
+
+
+#bouton{
+    /* 1. Masquage par défaut (Mobile First) */
+    display: none;
+}
+
+/* 2. Media Query pour l'affichage sur Desktop (624px et plus) */
+@media (min-width: 624px) {
+    #bouton {
+        display: flex; 
+        /* position: fixed;  */
+        /* top: 0;
+        left: 0; */
+      
+        
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
