--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,22 @@ body {
         
     }
 }
+#bord{
+    /* 1. Masquage par défaut (Mobile First) */
+    display: none;
+}
+
+/* 2. Media Query pour l'affichage sur Desktop (624px et plus) */
+@media (min-width: 624px) {
+    #bord {
+        display: flex; 
+        /* position: fixed;  */
+        /* top: 0;
+        left: 0; */
+      
+        
+    }
+}
 
 
 
